tests/NormalTests/paczka1/small_fuzzy/33579776.err
Error in line 5: A428 A428 10,3
Error in line 6: A428 S459 70,4
